# RAG-Learnings

./: .gitignore  pyproject.toml  requirements.txt
0-DataIngestParsing/: dataingestion.ipynb  dataparsingdoc.ipynb  dataparsingpdf.ipynb
0-DataIngestParsing/data/docs/: CHAPTER 5 _ INDIA , THAT IS BHARAT.docx
0-DataIngestParsing/data/text_files/: machine_learning.txt  python_intro.txt
1-VectorEmbeddings/: embedding.ipynb  semanticsearch.ipynb
vector_stores/FAISS/: faiss.ipynb
vector_stores/chroma_db/: chroma.sqlite3  chromadb.ipynb
